k8s/app/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
